# RapidWebForgeApp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  rapidwebforge.ui  vcpkg.json
src/: main.cpp  rapidwebforge.cpp  rapidwebforge.h
src/components/addfield-dashboard/: addfielddialog.cpp  addfielddialog.h  addfielddialog.ui
src/components/backend-assistant/: backendassistant.cpp  backendassistant.h  backendassistant.ui
src/components/backend-dashboard/: backenddashboard.cpp  backenddashboard.h  backenddashboard.ui
src/components/configuration-view/: configurationview.cpp  configurationview.h  configurationview.ui
src/components/create-table-dashboard/: createtabledialog.cpp  createtabledialog.h  createtabledialog.ui
src/components/create-version/: createversion.cpp  createversion.h  createversion.ui
src/components/create-view/: createview.cpp  createview.h  createview.ui
src/components/creation-assistant/: creationassistant.cpp  creationassistant.h  creationassistant.ui
src/components/custom-tree-widget/: customtreewidget.cpp  customtreewidget.h
src/components/customprogress-dialog/: customprogressdialog.cpp  customprogressdialog.h
src/components/database-assistant/: databaseassistant.cpp  databaseassistant.h  databaseassistant.ui
src/components/delete-version/: deleteversion.cpp  deleteversion.h  deleteversion.ui
src/components/editfield-dashboard/: editfielddialog.cpp  editfielddialog.h  editfielddialog.ui
src/components/frontend-assistant/: frontendassistant.cpp  frontendassistant.h  frontendassistant.ui
src/components/frontend-dashboard/: frontenddashboard.cpp  frontenddashboard.h  frontenddashboard.ui
src/components/manage-version/: manageversion.cpp  manageversion.h  manageversion.ui
src/components/project-preview/: projectpreview.cpp  projectpreview.h  projectpreview.ui
src/components/projects-panel/: projectspanel.cpp  projectspanel.h  projectspanel.ui
src/components/stepper/: stepper.cpp  stepper.h  stepper.ui
src/components/stepper-dashboard/: stepperdashboard.cpp  stepperdashboard.h  stepperdashboard.ui
src/components/summary-assistant/: summaryassistant.cpp  summaryassistant.h  summaryassistant.ui
src/components/version-history/: versionhistory.cpp  versionhistory.h  versionhistory.ui
src/core/backend-generator/: backendgenerator.cpp  backendgenerator.h
src/core/code-generator/: codegenerator.cpp  codegenerator.h
src/core/configuration-manager/: configurationmanager.cpp  configurationmanager.h
src/core/deploy-manager/: deploymanager.cpp  deploymanager.h
src/core/frontend-generator/: frontendgenerator.cpp  frontendgenerator.h
src/core/project-manager/: projectmanager.cpp  projectmanager.h
src/core/version-manager/: versionmanager.cpp  versionmanager.h
src/models/component/: component.cpp  component.h
src/models/component-type/: componenttype.h
src/models/configuration/: configuration.cpp  configuration.h
src/models/database-data/: databasedata.cpp  databasedata.h
src/models/field/: field.cpp  field.h
src/models/project/: project.cpp  project.h
src/models/route/: route.cpp  route.h
src/models/transaction/: transaction.cpp  transaction.h
src/models/view/: view.cpp  view.h
src/resources/: resources.qrc
src/resources/inja_templates/: routesIndex.inja
src/resources/inja_templates/backend/: controllers.inja  models.inja  modelsIndex.inja  routes.inja
src/resources/inja_templates/frontend/: app.inja  main.inja  model.inja  service.inja  view.inja
src/resources/inja_templates/nginx/: nginx_template.inja
src/resources/styles/: backenddasboard.qss  deletebutton.qss  frontenddashboard.qss  primarybutton.qss  projectspanel.qss  secondarybutton.qss
src/utils/database/: database.cpp  database.h
src/utils/file/: fileutiils.cpp  fileutiils.h
src/utils/render_callback/: rendercallback.cpp  rendercallback.h
src/utils/ziphelper/: ziphelper.cpp  ziphelper.h
